# DO NOT WRITE CHINESE IN THIS FILE, Others: 'cp950' codec can't decode byte

# cfg follows the format of ini
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html

[metadata]
name = cmd-register
version = 0.0.0
author = Carson Tseng
author_email = jackparadise520a@gmail.com
description = A decorator to register functions into a container
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CarsonSlovoka/cmd-register

# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
# By default, include-package-data is true in pyproject.toml
# include_package_data = True => enable MANIFEST.in
include_package_data = True
packages = find:
python_requires = >=3.6
# install_requires
#     requests
#     numpy

[options.packages.find]
exclude =
    tests
    examples
    test*
